[package]
authors = ["Mustafa <mustafa.moiz125@gmail.com>"]
edition = "2018"
name = "renom"
version = "0.1.12"
description = "A simple program to rename Unreal Engine 4 projects."
keywords = ["gamedev", "ue4", "unreal_engine", "rename"]
categories = [
    "command-line-utilities",
    "development-tools",
    "game-development",
    "games",
]
license = "MIT"
repository = "https://github.com/UnrealisticDev/Renom"
documentation = "https://unrealistic.dev/articles/rename-your-project-including-code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
rust-ini = "0.15"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
colored = "2"
term = "0.6.1"
sha2 = "0.10.2"
walkdir = "2"
inquire = "0.6.0"
