[package]
authors = ["Mustafa <mustafa.moiz125@gmail.com>"]
edition = "2018"
name = "renom"
version = "1.4.0"
description = "A simple program to rename Unreal Engine projects."
keywords = ["gamedev", "ue4", "ue5", "unreal_engine", "rename"]
categories = [
    "command-line-utilities",
    "development-tools",
    "game-development",
    "games",
]
license = "MIT"
repository = "https://github.com/UnrealisticDev/Renom"
documentation = "https://unrealistic.dev/articles/rename-your-project-including-code"

[lib]
name = "renom"
path = "src/lib.rs"

[[bin]]
name = "renom"
path = "src/main.rs"

[dependencies]
regex = "1.3.9"
rust-ini = "0.15"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
colored = "2"
term = "0.6.1"
sha2 = "0.10.2"
walkdir = "2"
inquire = "0.6.0"
clap = { version = "4.2.2", features = ["derive"] }
chrono = "0.4.38"
toml = "0.8.19"
ulid = "1.1.3"
indoc = "2.0.5"
